adjust margin to prevent horizontal scrolling

--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -12,8 +12,8 @@
   line-height: 46px;
   letter-spacing: 0px;
   text-align: left;
-  padding: 80px 624px 64px 104px;
-  margin: 0;
+  margin: 0 624px 64px 104px;
+  padding-top: 80px;
 }
 
 .search-results__card-list {
@@ -26,7 +26,7 @@
 }
 
 .search-results__button {
-  margin: 56px 576px 80px 576px;
+  margin: 56px 35% 80px 35%;
   width: 288px;
   background-color: #ffffff;
   border-radius: 80px;
